# GitIT

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
crates/app-desktop/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
crates/app-desktop/capabilities/: default.json
crates/app-desktop/src/: error.rs  lib.rs  main.rs  worker.rs
crates/app-desktop/src/handlers/: repo.rs
crates/app-desktop/src/ipc/: mod.rs  rpc.rs  stronghold.rs
crates/app-desktop/src/ipc/vault/: mod.rs  stronghold.rs  support.rs
crates/app-desktop/src/plugins/: mod.rs  vault_plugin.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: ctx.rs  error.rs  hub_event.rs  lib.rs
crates/lib-core/src/model/: mod.rs  repo.rs
crates/lib-core/src/store/: mod.rs  repo_manager.rs  vault_manager.rs
crates/lib-event/: Cargo.toml
crates/lib-event/src/: error.rs  lib.rs  trx.rs  types.rs
crates/lib-git/: Cargo.toml
crates/lib-git/src/: branch.rs  commit.rs  error.rs  lib.rs  repo.rs
crates/lib-rpc/: Cargo.toml
crates/lib-rpc/src/: error.rs  ipc_error.rs  ipc_message.rs  ipc_params.rs  ipc_response.rs  ipc_result.rs  lib.rs
docs/: DOCUMENTATION.md
frontend/: package-lock.json  package.json  pcss.config.js  rollup.config.js  tsconfig.json
frontend/dist-ui/: index.html
frontend/dist-ui/css/: app-bundle.css  app-bundle.css.map
frontend/dist-ui/js/: app-bundle.js  app-bundle.js.map
frontend/src-ui/pcss/: base.pcss  main.pcss  plex.css  var-colors.pcss
frontend/src-ui/pcss/views/: app-v.pcss  branch-v.pcss  root-v.pcss  setup-v.pcss
frontend/src-ui/src/: base-v.ts  event.ts  icos.ts  ipc.ts  main.ts  router.ts  rpc-utils.ts  type-enhancements.ts  vault.ts
frontend/src-ui/src/bindings/: Branch.ts  Commit.ts  index.ts
frontend/src-ui/src/components/: app-header.ts  dg-dialog-error.ts  index.ts
frontend/src-ui/src/model/: repo.ts
frontend/src-ui/src/views/: app-v.ts  header-action-v.ts  index.ts  root-v.ts  setup-v.ts
frontend/src-ui/src/views/repo/: branch-add-m.ts  branch-v.ts  index.ts
frontend/src-ui/src/views/setup/: index.ts  setup-v.ts  stage-creds.ts  stage-vault.ts
