[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    "crates/app-desktop",
    "crates/lib-core",
    "crates/lib-git",
    "crates/lib-rpc",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serde_with_macros = "3"
git2 = { version = "0.20.2", features = ["https", "ssh"] }
value-ext = "0.1.1"
ts-rs = { version = "6" }
serde_with = { version = "3", features = ["time_0_3"] }
rpc-router = "=0.2.0-alpha.1"
derive_more = { version = "2", features = ["from", "display"] }
