[package]
name = "app-desktop"
version = "0.1.0"
description = "Linux GIT client made with rust"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lib-rpc = {path = "../lib-rpc"}
lib-core = {path = "../lib-core"}
lib-git = {path = "../lib-git"}

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_with = {workspace=true }
blake3 = {version="1.5.5", features=["traits-preview"]}
serde = {workspace = true}
serde_json = {workspace = true}
tauri-plugin-stronghold = "2"
tokio = {workspace = true}
derive_more = {workspace = true}
rpc-router = {workspace = true}
uuid = {version = "1", features = ["v4", "fast-rng",] }
tauri-plugin-dialog = "2"
iota_stronghold = "2"
iota-crypto = "0.23"
zeroize = "1.8.2"
