[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
lib-git = {path = "../lib-git"}

tauri = { version = "2", features = [] }
derive_more = {workspace = true}
serde = {workspace=true}
rpc-router = {workspace = true}
serde_with = {workspace=true }
iota_stronghold = "2"
iota-crypto = "0.23"
