[package]
name = "lib-event"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_with = { workspace = true }
serde_with = { version = "3", features = ["time_0_3"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

strum_macros = "0.27"
# derive_more = { workspace = true }
derive_more = { version = "2", features = ["from", "display"] }
# flume = { workspace = true }

flume = { version = "0.11", features = ["async"] }

# [lints]
# workspace = true
